# snake

./: .gitignore  CMakeLists.txt  README.md  install.sh
include/Entities/: Snake.hpp
include/Scenes/: MainMenuScene.hpp
lib/ECS/: CMakeLists.txt
lib/ECS/include/Core/Scenes/: Scene.hpp
lib/ECS/include/Core/Scenes/Manager/: SceneManager.hpp
lib/ECS/src/Core/Scenes/Manager/: SceneManager.cpp
src/: main.cpp
src/Entities/: Snake.cpp
src/Scenes/: MainMenuScene.cpp
